--- a/repl/generator/altium.repl.gen.csproj
+++ b/repl/generator/altium.repl.gen.csproj
@@ -1,23 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>altium.sort</AssemblyName>
-    <RootNamespace>Altium.Repl.Sort</RootNamespace>
+    <RootNamespace>Altium.Repl.Generator</RootNamespace>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AssemblyName>altium.gen</AssemblyName>
+		<OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>..\_bin</OutputPath>
+    <OutputPath>..\..\_bin</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\_bin</OutputPath>
+    <OutputPath>..\..\_bin</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\generator\altium.repl.gen.csproj" />
+    <ProjectReference Include="..\..\core\altium.core.csproj" />
   </ItemGroup>
 
 </Project>
