--- a/repl/sort/Properties/launchSettings.json
+++ b/repl/sort/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "altium.repl.sort": {
       "commandName": "Project",
-      "commandLineArgs": "-n 1gb.txt"
+      "commandLineArgs": "-n 200mb.txt"
     }
   }
 }
